<resources>
    <string name="app_name">IOT2023</string>
    <string name="no_data">No Data</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_error">there is no such recipe name</string>
    <string name="recipe_details_preview">this is the recipes details, some text to test the appearance of
        the view It\'s time for a truly uncompromising smartphone. One that was designed and
        manufactured by technical enthusiasts - in close coordination with the future users. A
        smartphone that perfectly combines fascinating technology, groundbreaking design and
        breakthrough innovation. It is time for the OnePlus 3. But do not rely on our word. Convince
        yourself.
    </string>
    <string name="recipe_title_preview">this is the recipe name</string>
    <string name="recipe">Recipes</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="refresh">refresh</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_recipe_details">Recipe Details</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="invalid_username_and_password">please check your username and password</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="test_password">ahmed</string>
    <string name="test_email">ahmed@ahmed.ahmed</string>


    <string name="time_hours_minutes_seconds_formatter" translatable="false">%02d:%02d:%02d</string>
    <string name="time_minutes_seconds_formatter" translatable="false">%02d:%02d</string>
    <string name="time_seconds_formatter" translatable="false">00:%02d</string>

    <string name="back_to_app">Back to app</string>
    <string name="exit">Exit</string>

    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="detect_fire">Phát hiện có lửa đang cháy, đèn và còi cảnh báo đang kêu</string>
    <string name="turn_off_alarm">Để tắt đèn và còi, vui lòng bấm nút "Tắt" bên dưới</string>
    <string name="cancel">Huỷ</string>
    <string name="turn_off">Tắt</string>
    <string name="tempeature">Nhiệt độ</string>
    <string name="humidity">Độ ẩm</string>
    <string name="detect">Phát hiện lửa</string>
    <string name="no">Không</string>
    <string name="yes">Có</string>
</resources>
