<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_corner_12x"
    android:backgroundTint="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:padding="@dimen/space_20x">

        <ImageView
            android:id="@+id/ivFire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detect_fire"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/font_20x"
            android:textFontWeight="900"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/turn_off_alarm"
            android:layout_marginVertical="@dimen/space_20x"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16x"
            android:textFontWeight="400"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/cancel"
                android:background="@drawable/bg_corner_12_outline"
                android:layout_marginEnd="@dimen/space_12x"
                android:paddingVertical="@dimen/space_12x"
                android:paddingHorizontal="@dimen/space_24x"/>
            <TextView
                android:id="@+id/tvTurnOff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/turn_off"
                android:gravity="center"
                android:textColor="@color/black"
                android:background="@drawable/bg_corner_12x"
                android:backgroundTint="@color/pos_2"
                android:paddingVertical="@dimen/space_12x"
                android:paddingHorizontal="@dimen/space_24x"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>