<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_app_name"
        android:fontFamily="@font/fruit_days"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:text="@string/app_name"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/llDetect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        android:orientation="horizontal"
        android:layout_margin="@dimen/space_8x"
        android:background="@drawable/bg_corner_12_outline"
        android:padding="@dimen/space_24x">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/ic_fire"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detect"
                app:layout_constraintTop_toBottomOf="@id/tv_app_name"/>
            <TextView
                android:id="@+id/tvDetect"
                android:text="@string/no"
                android:fontFamily="@font/interblack"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_temperature_title"
        android:fontFamily="@font/interblack"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:text="@string/tempeature"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toBottomOf="@id/llDetect"
        app:layout_constraintStart_toStartOf="@id/progress_circular_temperature"
        app:layout_constraintEnd_toEndOf="@id/progress_circular_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/progress_circular_temperature"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/custom_progress_bar"
        android:progress="20"
        app:layout_constraintTop_toBottomOf="@id/tv_temperature_title"
        app:layout_constraintStart_toStartOf="parent"
        />
    <LinearLayout
        android:id="@+id/container_temperature"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/progress_circular_temperature"
        app:layout_constraintBottom_toBottomOf="@id/progress_circular_temperature"
        app:layout_constraintStart_toStartOf="@id/progress_circular_temperature"
        app:layout_constraintEnd_toEndOf="@id/progress_circular_temperature">

        <TextView
            android:id="@+id/tv_temperature"
            android:text="20"
            android:textSize="@dimen/font_24x"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_celsius"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_humidity_title"
        android:fontFamily="@font/interblack"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:text="@string/humidity"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toBottomOf="@id/llDetect"
        app:layout_constraintStart_toStartOf="@id/progress_circular_humidity"
        app:layout_constraintEnd_toEndOf="@id/progress_circular_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:id="@+id/progress_circular_humidity"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/custom_progress_bar_humidity"
        android:progress="70"
        app:layout_constraintTop_toBottomOf="@id/tv_humidity_title"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/container_himidity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/progress_circular_humidity"
        app:layout_constraintBottom_toBottomOf="@id/progress_circular_humidity"
        app:layout_constraintStart_toStartOf="@id/progress_circular_humidity"
        app:layout_constraintEnd_toEndOf="@id/progress_circular_humidity">

        <TextView
            android:id="@+id/tv_humidity"
            android:text="70%"
            style="@style/text_style_36"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/progress_circular_humidity">
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="150dp"
            android:paddingHorizontal="50dp"
            android:layout_marginEnd="@dimen/space_24x"
            android:layout_marginStart="@dimen/space_8x"
            android:background="@drawable/bg_outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_circular_humidity">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LED"
                style="@style/text_bold_20"
                android:layout_marginTop="@dimen/space_8x"
                android:textColor="@color/black"
                android:layout_gravity="top|center"/>
            <ImageView
                android:id="@+id/iv_on_off_led"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_off" />
        </FrameLayout>

        <FrameLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:paddingHorizontal="50dp"
            android:layout_marginEnd="@dimen/space_8x"
            android:background="@drawable/bg_outline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_circular_humidity">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BUZZER"
                style="@style/text_bold_20"
                android:layout_marginTop="@dimen/space_8x"
                android:textColor="@color/black"
                android:layout_gravity="top|center"/>
            <ImageView
                android:id="@+id/iv_on_off_buzzer"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_off"/>
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>